# Server/root/src/models/listingModel.js
@@ -109,6 +109,10 @@ const listingSchema = new mongoose.Schema({
       banPermanently:{
           type: Boolean,
           default: false
+      },
+      prevBanNum:{
+          type: Number,
+          default: 0
       }
   }
 });
